--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ SECRET_ACCESS_TOKEN=123
 ACCESS_TOKEN_EXPIRY=15m
 SECRET_REFRESH_TOKEN=456
 REFRESH_TOKEN_EXPIRY=7d
+REFRESH_TOKEN_STORAGE_COUNT=5
 
 # Nodemailer 
 NODEMAILER_HOST=sandbox.smtp.mailtrap.io
