changeEmail and changeEmailConfirm development completed

--- a/.env
+++ b/.env
@@ -9,8 +9,11 @@ ACCESS_TOKEN_EXPIRY=15m
 SECRET_REFRESH_TOKEN=456
 REFRESH_TOKEN_EXPIRY=7d
 REFRESH_TOKEN_STORAGE_COUNT=5
+PASSWORD_RESET_TOKEN_EXPIRY_MINUTES=10
+CHANGE_EMAIL_TOKEN_EXPIRY_MINUTES=10
 
 # Nodemailer 
+FROM_MAIL="ExpressJS Auth Pg API <noreply@expressjsauthpgapi.com>"
 NODEMAILER_HOST=sandbox.smtp.mailtrap.io
 NODEMAILER_PORT=2525
 NODEMAILER_USER=065dead35d78b6
