updated README.md and .env, removed unnecessary files. etc.

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # Database 
 # DATABASE_URL=postgres://<username>:<password>@localhost:<port>/<database_name>
 DATABASE_URL=postgres://postgres:password@localhost:5432/AuthDB
+DATABASE_NAME=AuthDB
+SCHEMA_NAME=auth
 PORT=3000
 
 # Token Parameters
@@ -13,8 +15,8 @@ PASSWORD_RESET_TOKEN_EXPIRY_MINUTES=10
 CHANGE_EMAIL_TOKEN_EXPIRY_MINUTES=10
 
 # Nodemailer 
-FROM_MAIL="ExpressJS Auth Pg API <noreply@expressjsauthpgapi.com>"
 NODEMAILER_HOST=sandbox.smtp.mailtrap.io
 NODEMAILER_PORT=2525
 NODEMAILER_USER=065dead35d78b6
 NODEMAILER_PASS=36748b5931e282
+FROM_MAIL="ExpressJS Auth Pg API <noreply@expressjsauthpgapi.com>"
