.env and rest-client updated

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ CHANGE_EMAIL_TOKEN_EXPIRY_MINUTES=10
 
 # Nodemailer 
 NODEMAILER_HOST=sandbox.smtp.mailtrap.io
-NODEMAILER_PORT=2525
-NODEMAILER_USER=065dead35d78b6
-NODEMAILER_PASS=36748b5931e282
+NODEMAILER_PORT=<nodemailer_port>
+NODEMAILER_USER=<nodemailer_user>
+NODEMAILER_PASS=<nodemailer_pass>
 FROM_MAIL="ExpressJS Auth Pg API <noreply@expressjsauthpgapi.com>"
