--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ SCHEMA_NAME=auth
 PORT=3000
 
 # Token Parameters
-SECRET_ACCESS_TOKEN=MySecretAccessToken
+SECRET_ACCESS_TOKEN=<MySecretAccessToken>
 ACCESS_TOKEN_EXPIRY=15m
-SECRET_REFRESH_TOKEN=MySecretRefreshToken
+SECRET_REFRESH_TOKEN=<MySecretRefreshToken>
 REFRESH_TOKEN_EXPIRY=7d
 REFRESH_TOKEN_STORAGE_COUNT=5
 PASSWORD_RESET_TOKEN_EXPIRY_MINUTES=10
