--- a/.env
+++ b/.env
@@ -13,6 +13,8 @@ REFRESH_TOKEN_EXPIRY=7d
 REFRESH_TOKEN_STORAGE_COUNT=5
 PASSWORD_RESET_TOKEN_EXPIRY_MINUTES=10
 CHANGE_EMAIL_TOKEN_EXPIRY_MINUTES=10
+ACCESS_TOKEN_COOKIE_MAX_AGE=900000
+REFRESH_TOKEN_COOKIE_MAX_AGE=86400000
 
 # Nodemailer 
 NODEMAILER_HOST=sandbox.smtp.mailtrap.io
